# Image-Processor

./: CMakeLists.txt  base_filter.h  crop.cpp  crop.h  edge.cpp  edge.h  exceptions.cpp  exceptions.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  image.cpp  image.h  negative.cpp  negative.h  palette.cpp  palette.h  parsing.cpp  sharpening.cpp  sharpening.h
